force-app/main/core/objects/ContentVersion/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Attachment_Status</valueSetName>
    </valueSet>
</CustomField>